--- a/menu.html
+++ b/menu.html
@@ -24,25 +24,25 @@
         </center>
         <div class="Starters">
             <div class="box">
-                <img src="starters/s1.webp"
+                <img src="s1.webp"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">MEDHU VADAI-₹50</h4>
                 <p style="color: white;">Crispy on the outside, soft inside lentil doughnuts served with chutney and sambar.</p>
             </div>
              <div class="box">
-                <img src="starters/s2.jpg"
+                <img src="s2.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">PANEER TIKKA-₹120</h4>
                 <p style="color: white;">Grilled spicy panner cubes marinated in yoghurt and Indian spices</p>
             </div>
             <div class="box">
-                <img src="starters/s3.jpg"
+                <img src="s3.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">SPRING ROLLS-₹80</h4>
                 <p style="color: white;">Grilled spicy panner cubes marinated in yoghurt and Indian spices</p>
             </div>
             <div class="box">
-                <img src="starters/s4.jpg"
+                <img src="s4.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">PANIPURI-₹60</h4>
                 <p style="color: white;">Hollow crispy puries filled with spicy tamarind water and potato mix</p>
@@ -50,25 +50,25 @@
         </div> <br>
         <div class="Starters">
             <div class="box">
-                <img src="starters/s5.jpg"
+                <img src="s5.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">CHICKEN 65-₹150</h4>
                 <p style="color: white;">Crispy on the outside, soft inside lentil doughnuts served with chutney and sambar.</p>
             </div>
              <div class="box">
-                <img src="starters/s6.jpg"
+                <img src="s6.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">IDLI CHAAT-₹70</h4>
                 <p style="color: white;">Grilled spicy panner cubes marinated in yoghurt and Indian spices</p>
             </div>
             <div class="box">
-                <img src="starters/s7.webp"
+                <img src="s7.webp"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">FISH FRY-₹180</h4>
                 <p style="color: white;">Grilled spicy panner cubes marinated in yoghurt and Indian spices</p>
             </div>
             <div class="box">
-                <img src="starters/s8.png"
+                <img src="s8.png"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">MASALA PURI-₹60</h4>
                 <p style="color: white;">Hollow crispy puries filled with spicy tamarind water and potato mix</p>
@@ -80,25 +80,25 @@
         </center>
         <div class="Starters">
             <div class="box">
-                <img src="maindish/m1.jpg"
+                <img src="m1.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">SAMBAR SADAM-₹90</h4>
                 <p style="color: white;"> Classic lentil-tamarind curry mixed with rice, served with appalam.</p>
             </div>
              <div class="box">
-                <img src="maindish/m2.webp"
+                <img src="m2.webp"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">PANEER BUTTER MASALA-₹150</h4>
                 <p style="color: white;">Creamy tomato gravy with soft paneer cubes, paired with aromatic cumin rice.</p>
             </div>
             <div class="box">
-                <img src="maindish/m3.jpg"
+                <img src="m3.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">THAYIR SADAM-₹70</h4>
                 <p style="color: white;">Cool and creamy curd rice with mustard, curry leaves, and a hint of ginger.</p>
             </div>
             <div class="box">
-                <img src="maindish/m4.jpg"
+                <img src="m4.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">CHICKEN BIRIYANI-₹160</h4>
                 <p style="color: white;">Authentic Tamil-style biryani made with seeraga samba rice and tender chicken.</p>
@@ -106,25 +106,25 @@
         </div> <br>
         <div class="Starters">
             <div class="box">
-                <img src="maindish/m5.jpg"
+                <img src="m5.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">MUTTON KUZHAMBU-₹180</h4>
                 <p style="color: white;">Spicy village-style mutton curry served with white rice.</p>
             </div>
              <div class="box">
-                <img src="maindish/m6.jpg"
+                <img src="m6.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">FISH CURRY-₹150</h4>
                 <p style="color: white;">Hot and tangy fish kuzhambu served with rice, poriyal, and appalam.</p>
             </div>
             <div class="box">
-                <img src="maindish/m7.jpg"
+                <img src="m7.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">PARROTA-₹90</h4>
                 <p style="color: white;"> Flaky parotta served with flavorful chicken gravy.</p>
             </div>
             <div class="box">
-                <img src="maindish/m8.jpg"
+                <img src="m8.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">EGG CURRY-₹110</h4>
                 <p style="color: white;"> Boiled eggs in spicy masala gravy served with steamed rice.</p>
@@ -136,25 +136,25 @@
         </center>
         <div class="Starters">
             <div class="box">
-                <img src="desserts/d1.jpg"
+                <img src="d1.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">GULAB JAMMUN-₹60 </h4>
                 <p style="color: white;">Soft milk balls soaked in warm cardamom sugar syrup</p>
             </div>
              <div class="box">
-                <img src="desserts/d2.jpg"
+                <img src="d2.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">BASUNDI-₹90</h4>
                 <p style="color: white;">hickened milk dessert with nuts-served chilled.</p>
             </div>
             <div class="box">
-                <img src="desserts/d3.jpg"
+                <img src="d3.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">FALOODA-₹100</h4>
                 <p style="color: white;">Layered dessert with ice cream, vermicelli, jelly, and rose milk.</p>
             </div>
             <div class="box">
-                <img src="desserts/d4.png"
+                <img src="d4.png"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">RASMALAI-₹90</h4>
                 <p style="color: white;">Soft paneer balls soaked in saffron-flavored milk.</p>
@@ -162,25 +162,25 @@
         </div> <br>
         <div class="Starters">
             <div class="box">
-                <img src="desserts/d5.jpg"
+                <img src="d5.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">ICE CREAM-₹40</h4>
                 <p style="color: white;">Simple, cool, and perfect after a spicy meal.</p>
             </div>
              <div class="box">
-                <img src="desserts/d6.jpg"
+                <img src="d6.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">KAJU KATLI-₹70</h4>
                 <p style="color: white;">Diamond-cut cashew sweets with smooth texture and rich taste.</p>
             </div>
             <div class="box">
-                <img src="desserts/d7.jpg"
+                <img src="d7.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">FRUITSALAD ICECREAM-₹90</h4>
                 <p style="color: white;">Fresh fruits topped with a scoop of vanilla ice cream-refreshing and colourful.</p>
             </div>
             <div class="box">
-                <img src="desserts/d8.jpg"
+                <img src="d8.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">MOUSSE-₹100</h4>
                 <p style="color: white;">Creamy dessert with a rich,airy texture that melts your mouth</p>
@@ -192,25 +192,25 @@
         </center>
         <div class="Starters">
             <div class="box">
-                <img src="drinks/b1.jpg"
+                <img src="b1.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">SUTTA CHAI-₹20</h4>
                 <p style="color: white;">Hot, smoky roadside-style tea brewed strong with milk and spices.</p>
             </div>
              <div class="box">
-                <img src="drinks/b2.jpg"
+                <img src="b2.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">FILTER COFFEE-₹30</h4>
                 <p style="color: white;">Classic South Indian filter kaapi served in steel tumbler-strong and aromatic.</p>
             </div>
             <div class="box">
-                <img src="drinks/b3.jpg"
+                <img src="b3.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">ROSE MILK-₹50</h4>
                 <p style="color: white;">Sweet and fragrant rose-flavoured milk-a childhood favourite.</p>
             </div>
             <div class="box">
-                <img src="drinks/b4.jpg"
+                <img src="b4.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">LEMON SODA-₹40</h4>
                 <p style="color: white;">Fizz meets flavour! Choose your twist-tangy or sweet.</p>
@@ -218,25 +218,25 @@
         </div> <br>
         <div class="Starters">
             <div class="box">
-                <img src="drinks/b5.jpg"
+                <img src="b5.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">BADAM MILK-₹60</h4>
                 <p style="color: white;">Chilled milk with badam flavour and almond flakes-rich and tasty.</p>
             </div>
              <div class="box">
-                <img src="drinks/b6.jpg"
+                <img src="b6.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">TENDER COCONUT-₹50</h4>
                 <p style="color: white;">Naturally sweet and hydrating-served straight from the shell.</p>
             </div>
             <div class="box">
-                <img src="drinks/b7.jpg"
+                <img src="b7.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">COLD COFFEE-₹80</h4>
                 <p style="color: white;">Chilled coffee blended with cream and topped with ice cream-dessert in a glass!</p>
             </div>
             <div class="box">
-                <img src="drinks/b8.jpg"
+                <img src="b8.jpg"
                 style="width: 300px; height: 300px; object-fit:cover">
                 <h4 style="color: white;">BUTTER MILK-₹25</h4>
                 <p style="color: white;">Spiced, cool buttermilk with ginger, curry leaves, and chillies-digestion hero!</p>
